<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BorrowBookActivity"
    android:background="@drawable/bg3" android:alpha="0.7">

    <TextView
        android:id="@+id/text_borrow_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:text="@string/borrow_book_date"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="190dp"
        app:layout_constraintStart_toEndOf="@+id/textViewExplore"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/date_pic" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/selected_dates"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:text="@string/selected_dates"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_choose_date"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_button3"
        android:drawableLeft="@drawable/ic_action_date"
        android:paddingLeft="20dp"
        android:text="@string/choose_your_dates"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="216dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/rounded_button3"
        android:drawableLeft="@drawable/ic_action_book"
        android:paddingLeft="20dp"
        android:text="@string/borrow_confirm"
        android:textColor="#000000"
        android:textStyle="bold" />



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="#FFFFFF"
            app:itemIconTint="@color/design_default_color_on_secondary"
            app:itemTextColor="#000000"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_navigation_menu" />


</RelativeLayout>