<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/setting_change"
    tools:context=".SettingChangePassword">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_action_back"
        android:text="@string/change_password"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/pass_new_password"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="194dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="278dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="237dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="276dp"
            android:layout_height="46dp"
            android:background="#FFFFFF"
            android:drawableRight="@drawable/ic_hide_password"
            android:ems="10"
            android:hint="Enter New Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="270dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="317dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="276dp"
            android:layout_height="46dp"
            android:background="#FFFFFF"
            android:drawableRight="@drawable/ic_hide_password"
            android:ems="10"
            android:hint="Confirm New Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounder_button"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/ic_action_confirm"
        android:onClick="confirmClick"
        android:text="@string/password_confirm"
        android:textColor="#09610C"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="421dp"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounder_button"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/ic_action_cancel"
        android:text="@string/password_cancel"
        android:textColor="#A31717"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="421dp" />

</LinearLayout>